--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "fp-ts": "^2.1.0",
     "fs-extra": "^8.1.0",
     "gatsby": "^2.15.28",
+    "gatsby-plugin-catch-links": "^2.1.24",
     "gatsby-plugin-codegen": "^1.0.4",
     "gatsby-plugin-feed": "^2.3.25",
     "gatsby-plugin-lodash": "^3.1.19",
@@ -79,9 +80,9 @@
     "source-map-support": "^0.5.16",
     "theme-ui": "^0.2.43",
     "ts-node": "^8.5.0",
+    "typeface-fira-code": "^1.1.3",
     "typeface-open-sans": "^0.0.75",
     "typeface-passion-one": "^0.0.72",
-    "typeface-fira-code": "^1.1.3",
     "typescript": "^3.7.4",
     "utility-types": "^3.8.0",
     "webpack-notifier": "^1.8.0"
